# OpenGLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.VSCodeCounter/2024-06-01_12-47-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-01_12-47-39/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
res/assets/sphere/: sphere.gltf
res/shaders/: basic.vs  blinn.frag  blinn.vert  default.frag  depth.frag  depth.geo  depth.vert  phong.frag  phong.vert  screenTexture.frag  screenTexture.vert  tex.frag  tex.vert
src/: Application.cpp  Application.h  Asset.cpp  Asset.h  AssetBox.cpp  AssetBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Database.h  FrameBuffer.cpp  FrameBuffer.h  Gui.cpp  Gui.h  ImageLoader.cpp  ImageLoader.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  LightBox.cpp  LightBox.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  Shadow.cpp  (+12 more)
src/shader/: Shader.cpp  Shader.h  basic.fs  default.vert  light.frag  phong.frag
